car insurance proposal form

--- a/index.html
+++ b/index.html
@@ -17,20 +17,26 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="form-group">
-							<label>Firstname</label>
+							<label>Broker name(if any)</label>
 							<input type="text" class="form-control" name="firstname">
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="form-group">
-							<label>Middle name</label>
+							<label>Name and Address of insured company/Group</label>
 							<input type="text" class="form-control" name="middlename">
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="form-group">
-							<label>Lastname</label>
+							<label>Insured type of Business/Activities</label>
 							<input type="text" class="form-control" name="lastname">
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="form-group">
+							<label>Period of Cover/Insurance Period(if not yearly,please advice the period)</label>
+							<input type="text" class="form-control" name="firstname">
 						</div>
 					</div>
 				</div>
