--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<div class="col-md-4">
 						<div class="form-group">
 							<label>Period of Cover/Insurance Period(if not yearly,please advice the period)</label>
-							<input type="date" number="Period of Cover/Insurance Period"> class="form-control" name="Period of Cover/Insurance Period(if not yearly,please advice the period">
+							<input type="date" number="Period of Cover/Insurance Period" class="form-control" name="Period of Cover/Insurance Period(if not yearly,please advice the period">
 						</div>
 					</div>
 				</div>
