car insurance proposal form

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 
 </head>
 <body>
+	<ol type="a">
 	<div class="container">
 		<div>
 			<form action="#" method="POST">
 				<div class="row">
 					<div class="col-md-4">
 						<div class="form-group">
-							<label>Broker name(if any)</label>
+							<li><label>Broker name(if any)</label>
 							<input type="text" class="form-control" name="Broker name">
 						</div>
-					</div>
+					</div></li>
 					<div class="col-md-4">
 						<div class="form-group">
 							<label>Name and Address of insured company/Group</label>
