car insurance proposal form

--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
 					</div></li>
 					<div class="col-md-4">
 						<div class="form-group">
-							<label>Name and Address of insured company/Group</label>
+							<li><label>Name and Address of insured company/Group</label>
 							<input type="text" class="form-control" name="Name and Address of insured company/Group">
 						</div>
-					</div>
+					</div></li>
 					<div class="col-md-4">
 						<div class="form-group">
-							<label>Insured type of Business/Activities</label>
+							<li><label>Insured type of Business/Activities</label>
 							<input type="text" class="form-control" name="Insured type of Business/Activities">
 						</div>
 					</div>
-			
+			</li>
 					<div class="col-md-4">
 						<div class="form-group">
-							<label>Period of Cover/Insurance Period(if not yearly,please advice the period)</label>
+							<li><label>Period of Cover/Insurance Period(if not yearly,please advice the period)</label>
 							<input type="date" number="Period of Cover/Insurance Period" class="form-control" name="Period of Cover/Insurance Period(if not yearly,please advice the period">
 						</div>
-					</div>
+					</div></li>
 				</div>
 			</form>
 		</div>
