car insurance proposal form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-	<ol type="(a)">
+	<ol type="a">
 	<div class="container">
 		<div>
 			<form action="#" method="POST">
@@ -40,8 +40,14 @@
 							<li><label>Period of Cover/Insurance Period(if not yearly,please advice the period)</label>
 							<input type="date" number="Period of Cover/Insurance Period" class="form-control" name="Period of Cover/Insurance Period(if not yearly,please advice the period">
 						</div>
-					</div></li>
+					</div>
+					<label>Annual Turn Over</label>
+							<input type="text" class="form-control" name="Insured type of Business/Activities">
+						</div>
+					</div>
 				</div>
+				 <input type="submit" name="submit" value="submit">
+
 			</form>
 		</div>
 	</div>
