money insurance proposal form

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
 							<input type="date" number="Period of Cover/Insurance Period" class="form-control" name="Period of Cover/Insurance Period(if not yearly,please advice the period">
 						</div>
 					</div>
-					<label>Annual Turn Over</label>
-							<input type="text" class="form-control" name="Insured type of Business/Activities">
+					<div class="col-md-4">
+						<div class="form-group">
+					<li>label>Annual Turn Over</label>
+							<input type="text" class="form-control" name="Annual Turn Over">
 						</div>
 					</div>
-				</div>
+				</div></li><
 				 <input type="submit" name="submit" value="submit">
 
 			</form>
