--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 					</div>
 					<div class="col-md-4">
 						<div class="form-group">
-					<li>label>Annual Turn Over</label>
+					<li><label>Annual Turn Over</label>
 							<input type="text" class="form-control" name="Annual Turn Over">
 						</div>
 					</div>
-				</div></li><
+				</div>
 				 <input type="submit" name="submit" value="submit">
 
 			</form>
