--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 						</div>
 					</div>
 				</div>
+				<div class="col-md-4">
+						<div class="form-group">
+							<li><label>Period of Cover/Insurance Period(if not yearly,please advice the period)</label>
+							<input type="text" name= "Types of insurance requested" class="form-control" name="Types of insurance requested">
+						</div>
+					</div>
 				 <input type="submit" name="submit" value="submit">
 
 			</form>
