--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<input type="text" name= "Types of insurance requested" class="form-control" name="Types of insurance requested">
 						</div>
 					</div>
-					<li><input type="submit" name="submit" value="submit"></li>
+					<input type="submit" name="submit" value="submit">
 				 
 
 			</form>
