--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</div>
 				<div class="col-md-4">
 						<div class="form-group">
-							<li><label>Period of Cover/Insurance Period(if not yearly,please advice the period)</label>
+							<li><label>Types of insurance requested</label>
 							<input type="text" name= "Types of insurance requested" class="form-control" name="Types of insurance requested">
 						</div>
 					</div>
