new changes on proposal form

--- a/Theme/default/index.html
+++ b/Theme/default/index.html
@@ -2533,7 +2533,7 @@
                                                                 <div id="wizard">
                                                                     <section>
                                                                         <form class="wizard-form" id="example-advanced-form" action="#">
-                                                                            <h3> Registration </h3>
+                                                                            <h3> Motor Insurance </h3>
                                                                             <fieldset>
                                                                                 <div class="form-group row">
                                                                                     <div class="col-md-4 col-lg-2">
