new changes on proposal form

--- a/Theme/default/index.html
+++ b/Theme/default/index.html
@@ -56,7 +56,7 @@
                                                                 <div id="wizard">
                                                                     <section>
                                                                         <form class="wizard-form" id="example-advanced-form" action="#">
-                                                                            <h3> Motor Insurance </h3>
+                                                                            <h3> Motor </h3>
                                                                             <fieldset>
                                                                                 <div class="form-group row">
                                                                                     <div class="col-md-4 col-lg-2">
@@ -91,7 +91,7 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </fieldset>
-                                                                            <h3>Medical Insurance </h3>
+                                                                            <h3>Domestic </h3>
                                                                             <fieldset>
                                                                                 <div class="form-group row">
                                                                                     <div class="col-md-4 col-lg-2">
@@ -133,7 +133,7 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </fieldset>
-                                                                            <h3> Education </h3>
+                                                                            <h3> Medical </h3>
                                                                             <fieldset>
                                                                                 <div class="form-group row">
                                                                                     <div class="col-md-4 col-lg-2">
@@ -169,7 +169,7 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </fieldset>
-                                                                            <h3> Personal Accident Cover </h3>
+                                                                            <h3> Personal Accident</h3>
                                                                             <fieldset>
                                                                                 <div class="form-group row">
                                                                                     <div class="col-md-4 col-lg-2">
@@ -196,6 +196,59 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </fieldset>
+                                                                            <h3>Travel</h3>
+                                                                            <fieldset>
+                                                                                <div class="form-group row">
+                                                                                    <div class="col-md-4 col-lg-2">
+                                                                                        <label for="Company-2" class="block">Company:</label>
+                                                                                    </div>
+                                                                                    <div class="col-md-8 col-lg-10">
+                                                                                        <input id="Company-2" name="Company:" type="text" class="form-control required">
+                                                                                    </div>
+                                                                                </div>
+                                                                                <div class="form-group row">
+                                                                                    <div class="col-md-4 col-lg-2">
+                                                                                        <label for="CountryW-2" class="block">Country</label>
+                                                                                    </div>
+                                                                                    <div class="col-md-8 col-lg-10">
+                                                                                        <input id="CountryW-2" name="Country" type="text" class="form-control required">
+                                                                                    </div>
+                                                                                </div>
+                                                                                <div class="form-group row">
+                                                                                    <div class="col-md-4 col-lg-2">
+                                                                                        <label for="Position-2" class="block">Position</label>
+                                                                                    </div>
+                                                                                    <div class="col-md-8 col-lg-10">
+                                                                                        <input id="Position-2" name="Position" type="text" class="form-control required">
+                                                                                    </div>
+                                                                                </div>
+                                                                            </fieldset>
+                                                                            <h3>Marine</h3>
+                                                                            <fieldset>
+                                                                                <div class="form-group row">
+                                                                                    <div class="col-md-4 col-lg-2">
+                                                                                        <label for="Company-2" class="block">Company:</label>
+                                                                                    </div>
+                                                                                    <div class="col-md-8 col-lg-10">
+                                                                                        <input id="Company-2" name="Company:" type="text" class="form-control required">
+                                                                                    </div>
+                                                                                </div>
+                                                                                <div class="form-group row">
+                                                                                    <div class="col-md-4 col-lg-2">
+                                                                                        <label for="CountryW-2" class="block">Country</label>
+                                                                                    </div>
+                                                                                    <div class="col-md-8 col-lg-10">
+                                                                                        <input id="CountryW-2" name="Country" type="text" class="form-control required">
+                                                                                    </div>
+                                                                                </div>
+                                                                                <div class="form-group row">
+                                                                                    <div class="col-md-4 col-lg-2">
+                                                                                        <label for="Position-2" class="block">Position</label>
+                                                                                    </div>
+                                                                                    <div class="col-md-8 col-lg-10">
+                                                                                        <input id="Position-2" name="Position" type="text" class="form-control required">
+                                                                                    </div>
+                                                                                </div>
                                                                         </form>
                                                                     </section>
                                                                 </div>
