--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Landing Page - Guru able Bootstrap4 admin template</title>
+    <title>Landing Page - Esurance365proposal form</title>
     <!-- Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Landing page template for creative dashboard">
@@ -50,11 +50,11 @@
               <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a class="page-scroll" href="#main">Home</a></li>
-                    <li><a class="page-scroll" href="#services">Important</a></li>
-                    <li><a class="page-scroll" href="#features">Benefits</a></li>
-                    <li><a class="page-scroll" href="#reviews">Testimonials</a></li>
-                    <li><a class="page-scroll" href="#pricing">Pricing</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a class="page-scroll" href="#services">About</a></li>
+                    <li><a class="page-scroll" href="#features">Get Plan</a></li>
+                    <li><a class="page-scroll" href="#reviews">Pricing </a></li>
+                    <li><a class="page-scroll" href="#pricing">Contact</a></li>
+                    <li><a href="">Try Free</a></li>
                 </ul>
             </div>
           </div>
