--- a/index.html
+++ b/index.html
@@ -456,14 +456,14 @@
         <div class="col-md-12 text-center">
           <img src="assets/logos/logo.png" alt="Guru Able Logo" />
           <ul class="footer-menu">
-            <li><a href="http://demo.com">Site</a></li>
+            <li><a href="http://demo.com">Links</a></li>
             <li><a href="#">Support</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Privacy</a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         <div class="footer-text">
           <p>
-            Copyright © 2017 Guru Able. All Rights Reserved.
+           All Rights Reserved by Cubic media Copyright © 2019  
           </p>
         </div>
       </div>
