--- a/index.html
+++ b/index.html
@@ -456,7 +456,12 @@
         <div class="col-md-12 text-center">
           <img src="assets/logos/logo.png" alt="Guru Able Logo" />
           <ul class="footer-menu">
-            <li><a href="http://demo.com">Links</a></li>
+            <li><li><a href="https://esurance365.com">Home</a></li>
+									<li><a href=#about>About</a></li>
+									<li><a href=#download>Get Plan</a></li>
+									<li><a href=#pricing>pricing</a></li>
+									<li><a href=#contact>Contact</a></li>
+									<li><a href="https://www.test.esurance365.com/create-demo-account" style="background: #409f89 !important;" class="st_default_btn" target="_blank">Try for free</a></li>Links</a></li>
             <li><a href="#">Support</a></li>
             <li><a href="#"></a></li>
             <li><a href="#">Contact</a></li>
